<resources>
    <string name="app_name">assigment</string>
    <string name="signUp">Sign Up</string>
    <string name="error">error</string>
    <string name="ok">ok</string>
    <string name="error_password">password not match</string>
    <string name="password_length">password length must be more then 6 character</string>
    <string name="empty_fields">All fileds are required</string>
    <string name="invalid_account">Invalid Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="titleHaircut">Chief Director Haircut</string>
    <string name="timeHaircut">45 Minutes</string>
    <string name="priceHairCut">RM100.00</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="children">Children</string>
    <string name="haircut0">\n*Add on: Wash RM10\n\n *All price is charged by Senior Stylist. \n\n*Additional 10% of chemical hair services charged by Director/ Senior Stylist.\n\n*Hair style design based on current trend.</string>
    <string name="book">Book an Appointmnet</string>
    <string name="haircut1">\n*Add on: Wash RM10\n\n *All price is charged by Senior Stylist. \n\n*Additional 10% of chemical hair services charged by Director/ Senior Stylist.\n\n *Additional 5% of charged for massage</string>
    <string name="haircut3">\n*Add on: Wash RM5\n\n *All price is charged by Senior Stylist. \n\n*Additional 10% of Natural hair syampoo services charged by Director/ Senior Stylist.</string>
    <string name="haircut2">\n*Add on: Wash RM10\n\n *All price is charged by Senior Stylist. \n\n*Additional 10% of chemical hair services charged by Director/ Senior Stylist. \n\n*Additional charges for extra-long hair length.\n\n *Additional 10% of facial service</string>

    <string name="titleDyeing">Hair Dyeing</string>
    <string name="timeDyeing">2 Hours</string>
    <string name="priceDyeing">RM150.00</string>
    <string name="dyeingMale">\n*Price will be increased with darker colors. \n\n*Additional 10% of chemical hair services charged to sensitive scalp.\n\n*Additional 10% of Hair bleaching for the darker colours.  </string>
    <string name="dyeingFemale">\n*Price will be increased with darker colors. \n\n*Additional 10% of chemical hair services charged to sensitive scalp.\n\n*Additional 10% of Hair bleaching for the darker colours.\n\n*Additional charges for extra-long hair length  </string>

    <string name="textAbout">E- Salon provides many high quality services including \nhaircut, coloring and much more. Not only will you\n leave feeling truly pampered, we will also give the knowledge to care for your hair and the best ways to maintain your look at home. Let us be the answer to \nall of your hair question!</string>
    <string name="email"><b>Mail us</b>\n e-salon@gmail.com</string>
    <string name="call"><b>Call Us</b>\n 012-345456789</string>
    <string name="location">E-salon,Jln XXX,\n58000 Kuala Lumpur</string>

</resources>