<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceDetail">

    <include
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="114dp">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/haircut_single">
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            app:cardCornerRadius="45dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/textTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/titleHaircut"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                    </TextView>

                    <TextView
                        android:id="@+id/textTime"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:text="@string/timeHaircut"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textTitle"
                        app:layout_constraintTop_toBottomOf="@+id/textTitle"
                        app:drawableLeftCompat="@drawable/timer">
                    </TextView>

                    <TextView
                        android:id="@+id/textPrice"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priceHairCut"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textTime"
                        app:layout_constraintTop_toBottomOf="@+id/textTime">
                    </TextView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/choice"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:layout_constraintStart_toStartOf="@+id/textPrice"
                        app:layout_constraintTop_toBottomOf="@+id/textPrice"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        app:cardCornerRadius="25dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <Button
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="changeText"
                                android:id="@+id/male"
                                android:text="@string/male">
                            </Button>
                            <Button
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:id="@+id/female"
                                android:onClick="changeText2"
                                android:text="@string/female">
                            </Button>
                            <Button
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:onClick="changeText3"
                                android:layout_weight="1"
                                android:id="@+id/childeren"
                                android:text="@string/children">
                            </Button>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/detailView"
                        android:layout_marginTop="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="188dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        app:cardCornerRadius="50dp"
                        app:layout_constraintStart_toStartOf="@+id/choice"
                        app:layout_constraintTop_toBottomOf="@+id/choice">

                        <TextView
                            android:paddingLeft="25dp"
                            android:id="@+id/detail"
                            android:background="#f25e7c"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/haircut0">
                        </TextView>
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/book"
                    android:layout_width="match_parent"
                    android:background="#f25e7c"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/deal"
                    android:text="@string/book">
                </Button>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>