<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragment_AboutUs">

    <include
        android:id="@+id/myToolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="114dp">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:drawable/toast_frame">

                <TextView
                    android:id="@+id/aboutus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:text="About Us"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textabout"
                    android:layout_width="363dp"
                    android:layout_height="172dp"
                    android:fontFamily="@font/regular"
                    android:textSize="16sp"
                    android:layout_marginStart="16dp"
                    android:text="@string/textAbout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/aboutus" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/toast_frame">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:text="Contact Us"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="157dp"
                    android:drawableStart="@drawable/email_pink"
                    android:drawablePadding="10dp"
                    android:layout_height="36dp"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="@+id/email"
                    app:layout_constraintTop_toBottomOf="@+id/email" />

                <TextView
                    android:id="@+id/textCall"
                    android:layout_width="157dp"
                    android:layout_height="36dp"
                    android:drawableLeft="@drawable/phone_call"
                    android:drawablePadding="10dp"
                    android:text="@string/call"
                    app:layout_constraintStart_toStartOf="@+id/textEmail"
                    app:layout_constraintTop_toBottomOf="@+id/textEmail">
                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/toast_frame">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:text="Location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/location"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/loupe"
                    app:layout_constraintStart_toStartOf="@+id/location"
                    app:layout_constraintTop_toBottomOf="@+id/location" />

                <ImageView
                    android:id="@+id/mapIcon"
                    android:layout_width="351dp"
                    android:layout_height="182dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/map"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textLocation">
                </ImageView>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>